--- a/De_Moespot.mw
+++ b/De_Moespot.mw
@@ -10,7 +10,7 @@ In 't blad stiet ok ankondigings van ni'j uutekomen streektaalboeken, verslagen 
 
 Deurdet 't Verbond meerdere schrieverskringen umsleut, gruuiden de umvang van 't blad nog aordig. [[Jannie Bakker-Rietman]] en [[Frank Löwik]] schrieft in 't [[Handboek Nedersaksische Taal- en Letterkunde]]:'' 'Dat bleek van levensbelang omdat het aantal inzendingen vanuit de Sallandse schrijverskring zorgelijk klein bleef.' ''
 
-Ze schrieft ok:'' 'Over het niveau van werk van ''De Moespot'' is al vaak geschreven, in welwillende en minder welwillende woorden. Ondertussen verleent het blad toch maar de ruimte aan iedereen die zich schriftelijk wil uiten in het Nedersaksisch van de aangesloten gebieden.'
+Ze schrieft ok: 'Over het niveau van werk van ''De Moespot'' is al vaak geschreven, in welwillende en minder welwillende woorden. Ondertussen verleent het blad toch maar de ruimte aan iedereen die zich schriftelijk wil uiten in het Nedersaksisch van de aangesloten gebieden.'
 
 ==Bronnen==
 *Jannie Bakker-Rietman en Frank Löwik (2008), 'Streektaalliteraturen in Overijssel'. In Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.), ''Handboek Nedersaksische Taal- en Letterkunde''. Assen: Van Gorcum. Blz. 392-3
@@ -18,5 +18,6 @@ Ze schrieft ok:'' 'Over het niveau van werk van ''De Moespot'' is al vaak geschr
 
 {{Dia|Dit stok is eschreven in 't [[Zuudwest-Zuud-Drèents]] van de Drèents-Oaveriesselse grèensstreek.}}
 
-[[Kategorie:Drèents artikel|Moespot, De]]
-[[Kategorie:Nedersaksies tiedschrift|Moespot, De]]
+{{DEFAULTSORT:Moespot, De}}
+[[Kategorie:Drèents artikel]]
+[[Kategorie:Nedersaksies tiedschrift]]
