--- a/Een_brogge_van_glas.mw
+++ b/Een_brogge_van_glas.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Een brogge van glas.jpg|thumb|right|upright|Omslag van "Een brogge van glas"]]
-'' '''Een brogge van glas''' '' is een autobiografische roman in et [[Stellingwarfs]] deur de [[Stellingwarf|Stellingwarver]] schriever [[Johan Veenstra]]. De roman is in 2006 uutgeven deur de [[Stichting Stellingwarver Schrieversronte]]. ''Een brogge van glas'' is as luusterboek verschenen bi'j Audiofrysk en kwam in september 2009 in een Friese vertaeling uut.
+'''''Een brogge van glas''''' is een autobiografische roman in et [[Stellingwarfs]] deur de [[Stellingwarf|Stellingwarver]] schriever [[Johan Veenstra]]. De roman is in 2006 uutgeven deur de [[Stichting Stellingwarver Schrieversronte]]. ''Een brogge van glas'' is as luusterboek verschenen bi'j Audiofrysk en kwam in september 2009 in een Friese vertaeling uut.
 
 Et verhael gaot over de verholing tussen Johan en zien moeder, die him as joongien altied bescharmt, him op laetere leeftied zels slim neudig is, en nao heur dood nog veul in him ommegaot. Hoe hecht of heur relaosie ok is, d'r bin dingen daoras ze niet over praoten kunnen; broggen van glas daoras ze niet overhenne gaon duren.
 
@@ -17,23 +17,30 @@ Een antal keer komt zien moeder an et woord in kursieve stokkies, daorin de schr
 De beschrievings van et heden wodt ofwisseld mit terogblikken op et verleden, waordeur de lezer langzeman een vollediger bield krigt van de schriever en zien aangst veur de wereld as joongien, tot zien muuizeme emancipaosie as volwassene die tot zien vieftigste veur zien moeder zorgt en toegeliekertied zien carrière maekt en zien seksuele identiteit ontdekt.
 
 ==Citaot==
-[[Ofbeelding:VeenstraBrogge.JPG|thumb|left|300px|De schriever mit zien roman]]
-:''Krek as et joongien van vroeger za'k veur et keukenraem zitten, die iene dag in 't jaor aj' weerommekommen op 'e fiets in je kotte jassien. Halverwege november is et: een mooie mar koolde haastdag. Et is krek as waj' even naor Siemen de bakker west om een bolle en een stieve koeke. Ik hoeve de ogen niet iens dichte te doen om tot tiene te tellen, ie kommen d'r zomar fleurig an fietsen, kieken aachteromme aj' et pattien inzwaaien en stappen naost huus van de fiets. De katte van de buren komt drekt op je toelopen en strikt je bi'j de bienen langes.
-:''  'Daor wa'k dan, zeg ie tegen me, 'of hej' de potten mit foksia's al in huus? Et is hier al mit al in goed een jaor tied niet iens zovule veraanderd.'
-:''  We gaon in huus. Ie hangen je jassien an de kapstok en stappen de kaemer in.
-:''  Ie hebben de stoelen ok aanders staon. Och, Han toch, wat hej' daor onder de klokke toch een grote foto van me staon. Zo mal hoeft et now toch ok weer niet?'
-:''  Ik schinke thee in en legge d'r een peer koekies bi'j op een paantien en laeter op 'e middag een stokkien keze. En ik vertelle dat ze me in een koetse deur Wolvege reden hebben omda'k vuventwintig jaor schriever was. Ie kieken me an.
-:''  'Bin ze now hielemaole gek?'
-:''  'Ie hadden best mitwild in die koetse.'
-:''  'Ja, dat zo'k stomme graeg wild hebben, mar zokke dingen kun now ienkeer niet meer.'
+[[Ofbeelding:VeenstraBrogge.JPG|thumb|300px|De schriever mit zien roman]]
+<blockquote style="font-style:italic">
+Krek as et joongien van vroeger za'k veur et keukenraem zitten, die iene dag in 't jaor aj' weerommekommen op 'e fiets in je kotte jassien. Halverwege november is et: een mooie mar koolde haastdag. Et is krek as waj' even naor Siemen de bakker west om een bolle en een stieve koeke. Ik hoeve de ogen niet iens dichte te doen om tot tiene te tellen, ie kommen d'r zomar fleurig an fietsen, kieken aachteromme aj' et pattien inzwaaien en stappen naost huus van de fiets. De katte van de buren komt drekt op je toelopen en strikt je bi'j de bienen langes.
 
-:Uut ''Een brogge van glas'' (p.85-86)
+'Daor wa'k dan, zeg ie tegen me, 'of hej' de potten mit foksia's al in huus? Et is hier al mit al in goed een jaor tied niet iens zovule veraanderd.'
+
+We gaon in huus. Ie hangen je jassien an de kapstok en stappen de kaemer in.
+
+Ie hebben de stoelen ok aanders staon. Och, Han toch, wat hej' daor onder de klokke toch een grote foto van me staon. Zo mal hoeft et now toch ok weer niet?'
+
+Ik schinke thee in en legge d'r een peer koekies bi'j op een paantien en laeter op 'e middag een stokkien keze. En ik vertelle dat ze me in een koetse deur Wolvege reden hebben omda'k vuventwintig jaor schriever was. Ie kieken me an.
+
+'Bin ze now hielemaole gek?'
+
+'Ie hadden best mitwild in die koetse.'
+
+'Ja, dat zo'k stomme graeg wild hebben, mar zokke dingen kun now ienkeer niet meer.'
+</blockquote>
+Uut ''Een brogge van glas'' (p. 85-86)
 
 ==Uutgaonde verwiezing==
 *[http://www.johan-veenstra.nl/ Webstee van Johan Veenstra, mit zien toespraoke bi'j de prissentaosie van ''Een brogge van glas'' (onder Gelegenhiedsverhaelen)]
 
 {{Dia|Dit artikel is schreven in et [[Stellingwarfs]] van [[Ni'jhooltpae]].}}
 
-{{DEFAULTSORT:Een Brogge Van Glas}}
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Literetuur in et Stellingwarfs]]
