--- a/Nedersaksische_literatuur_in_de_20e_ieuw.mw
+++ b/Nedersaksische_literatuur_in_de_20e_ieuw.mw
@@ -1,4 +1,4 @@
-{{Zie dv|'''Dit artikel gef een aoverzicht van de Nedersaksische literatuur in de 20e ieuw. Zie ok de artikels [[Nedersaksische literatuur töt 1900]] en [[Nedersaksische literatuur in de 21e ieuw]].}}
+{{Zie dv|Dit artikel gef een aoverzicht van de Nedersaksische literatuur in de 20e ieuw. Zie ok de artikels [[Nedersaksische literatuur töt 1900]] en [[Nedersaksische literatuur in de 21e ieuw]].}}
 De '''Nedersaksische literatuur in de 20e ieuw''' in [[Nederlaand]] is de literaire schrieverije in ienige variaant van 't [[Nedersaksisch]] in Nederlaand in de loop van die ieuw. Dizze schrieverije is een wiedere ontwikkeling van de [[Nedersaksische literetuur töt 1900|Nedersaksische literatuur uut de 19e ieuw]].
 
 Allewal de 20e-ieuwse Nedersaksische literatuur gien ononderbreuken voortzetting is van de schrieverije in 't [[Middelnederduuts]], leuten ofzunderlijke schrievers heur daor wal ies deur inspireren. Zo maakten schrievers as [[Jan Naarding]] en [[Klaas Kleine]] heur eigen beriemings van 't dierepos aover [[Reintien de vos]], geïnspireerd deur de Middelnederduutse bewarking die in 1498 in [[Lubeke]] was verschenen.
