--- a/Kurasau.mw
+++ b/Kurasau.mw
@@ -73,7 +73,7 @@ Töt in t begin van t [[20e eeuw|20ste joarhoonderd]] leawn Kurasau van [[haande
 [[Bestaand:Pontonbrug Willemstad.jpg|thumb|260px|Pontjesbrugge Willemstad ([[Keunigin Emmabrugge]])]]
 [[Bestaand:Diplora strigosa.jpg|thumb|260px|[[Diplora strigosa]] ([[harsenkoraal]])]]
 [[Bestaand:Flamingos op Curacau.JPG|thumb|260px|[[Flamingo's]] in t natuurgebeed bie Sunte Willibordus]]
-[[Bestaand:The colorful buildings of the Handelskade in Willemstad, Curaçao.jpg|left| 260px |Handelskade in Willemstad, Curaçao]]
+[[Bestaand:The colorful buildings of the Handelskade in Willemstad, Curaçao.jpg|thumb| 260px |Handelskade in Willemstad, Curaçao]]
 
 Kurasau is n tropies eilaand in t zuudn van de [[Karibiese zee]]. Met [[Aruba]] en [[Bonaire]] vörmt t de [[beneednweendse eilaandn]]; ook wal de ABC-eilaandn neumd ('''A'''ruba, '''B'''onaire, '''C'''uraçao). Van disse eilaandn is Kurasau t grötste. Kurasau besteet oet twee eilaandn: Kurasau en Klein Kurasau, wat 10 kilometer noar t oostn ligt. t Heugste peunt is met 375 meter de ''Sunte Kristoffelboarg''. t Eilaand is op ebouwd oet koraalkalk en vulkaniese rots.
 
