--- a/Jan_Zandbergen.mw
+++ b/Jan_Zandbergen.mw
@@ -6,7 +6,7 @@ Nöast zin skriefwoark deed Zandbergen ook met in de [[Revue|Riessense Revue]] e
 
 In 2017 köm hee nog in et lokale niejs umdat hee 750 slimericks emaakt har.<ref>[https://www.hartvanrijssen.nl/nieuws/algemeen/20379/jan-zandbergen-maakt-de-750-vol hartvanrijssen.nl. 'Jan Zandbergen maakt de 750 vol'. Skreven op 22 oktober 2017. Bekekken op 18 juni 2021.]</ref>
 
-Zaandboargen was fanatiek hardleuper bie de lokale atletiekverenige. Töt zinnen twee en tachtigsten hef hee dat aait nog probeerd, zelfs doas hee noa zwoare operaties eagenlik nit mear kon. In 2021 veunden de dokters [[kaanker]] an de alvleeskliere bie em. Op 'n zesteenden juni köm hee oet de tied.
+Zaandboargen was fanatiek hardleuper bie de lokale atletiekverenige. Töt zinnen twee en tachtigsten hef hee dat aait nog probeerd, zelfs doas hee noa zwoare operaties eagenlik nit mear kon. In 2021 veunden de dokters [[kaanker]] in de longn bie em. Op 'n zesteenden juni köm hee oet de tied.
 
 ==Oetgawes==
 *(2013) ''(S)Limerick of (S)Limmer-iej?'' - Bundel van limericks - Oetegewen in egen behear
