--- a/Klaus_Wunderlich.mw
+++ b/Klaus_Wunderlich.mw
@@ -3,21 +3,20 @@
 == Leawen ==
 Wunderlich gröaiden op in [[Chemnitz]] as zönne van nen politsie-inspekteur. Al met 16 joar was hee koorleader, mer de popmuziek treuk um toch mear an. In [[1951]] treuk Wunderlich met nen band noar [[Westduutslaand]] en "pingelden" as [[piano|pianist]] in een kafee-trio duur heel Duutslaand. In dissen tied maakten hee ook naam met et [[Hammondörgel]], wat vanof [[1955]] zin heuwdinstrumeant wör. "Et örgel is min leawen" en "met een Hammondörgel kö'j ieder striekinstrumeant noadoon, behalve een bottermes," zea Wunderlich. Hee treud in verskeadene kabaretten op as eankelspöller, töt at hee in [[1958]] oontdekt wör duur de platenmoatskoppieje [[Teldec]]. Noa een poar keer vuurspöllen, beuden dee um een platenkontrakt an.
 
-
 In de zeuwentiger joaren bouwden hee in [[Waldbronn]] bie [[Karlsroehe]] nen eegnen studio en begun met den [[Moog-synthesizer]] te spöllen. Hee zol der dree langspölplaten met opnemmen. Op zin "Sound 2000 - Moog, Organ, Rhythm"-album oet [[1973]], wat zin Moog-debuut was, spölden hee klassiekers oet de [[volksmuziek]]. Hee wör vuural bekeand met zinne "New Pop Organ Sound": melodiejen spölden he met nen Hammond H100, terwiel as hee der geluudseffekten umhen maakten met [[WERSI]]-örgels W248S, Lowrey H25-3 en vanof [[1997]] oook de W2 Helios. Disse sound was neet in et echt noa te spöllen, umdet et in de studio in mekoar ezat was. Ene van zinne bekeandste konserten was in de [[Londen]]se [[Royal Albert Hall]].
-
 
 Wunderlich gebreuk doarnöast ook nog de volgende örgels: [[Hammond]] C3, 0, [[Wersi]] W248S, Wersi Beta DX 400, Wersi Spectra CD700.
 
 OP den [[28 oktober|28sten oktober]] van [[1997]] kreeg Wunderlich bie zinne vrouwe Traudl en vreanden een hartanval in zin hoes in [[Bittelbrunn]].
 
 ===Mooi um te weten===
-* ''La Felicidad'' (van et album ''The Golden Sound of Hammond'' (ook bekeand as ''Hammond Für Millionen)) was de achtergroondmuziek vuur de [[België|Belgiese]] tekenfilmriege van [[Kabouter Wesley]], wat in [[Nederlaand]] vuural bekeand wör in et TV-programma [[Man bijt Hond]].
+* ''La Felicidad'' (van et album ''The Golden Sound of Hammond'', ook bekeand as ''Hammond Für Millionen'') was de achtergroondmuziek vuur de [[België|Belgiese]] tekenfilmriege van [[Kabouter Wesley]], wat in [[Nederlaand]] vuural bekeand wör in et TV-programma [[Man bijt Hond]].
 * Den [[BNN]]-presentator [[Ruben Nicolai]] dut Wunderlich earen duur as zin zönne op te treaden in et BNN-programma Ruben vs Katja goes Europe, in de ofsnedes vuur Duutslaand, Spanje en Oostenriek.  
 * In [[Wageningen]] steet ''Huize Wunderlich''', een studeantenhoes wat noar Klaus Wunderlich eneumd is.
 
 == Oetgoande koppelingen ==
 *[http://www.klauswunderlich.de/ Klaus Wunderlich-Homepage], vuur et leste bekekken op 29 juli 2013
 
+{{DEFAULTSORT:Wunderlich, Klaus}}
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Muzikaant]]
