--- a/Lissabon.mw
+++ b/Lissabon.mw
@@ -1,7 +1,7 @@
-[[Bestaand:LocalLisboa.svg|thumb|right|200px|Lissabon in t rood op ne kaarte van [[Portugal]]]]
+[[Bestaand:LocalLisboa.svg|thumb|200px|Lissabon in t rood op ne kaarte van [[Portugal]]]]
 
-'''Lissabon''' (in t [[Portugees]]: '''Lisboa''', Tweantse oetsproake {{IPA|/'lɪsəbɔ̃/}}, Portugese oetsproake {{IPA|/liʒˈβoɐ/}})  is de heuwdstad van [[Portugal]]. t Is ook de grötste stad van det laand, met binn de offisjele greanzn 547.631 inwonners<ref>[http://www.ine.pt/scripts/flex_v10/Main.html Censos 2011 – Resultados Preliminares]</ref> op ne oppervlakte van 84,8 km². t Versteadelikte gebeed um Lissabon strekt zik wied boetn de offisjele greanzn oet. Doar wont nog es 3 miljoen leu<ref>[http://www.demographia.com/db-worldua.pdf Demographia: World Urban Areas], meart 2010</ref> op ne oppervlakte van 958 km², woermet Lissabon t neegnde-grötste versteadelikte gebeed van [[Europa (continent)|Europa]] is. Ongevear 2.831.000<ref>United Nations Department of Economic and Social Affairs, [http://esa.un.org/wup2009/unup/index.asp?panel=2 World Urbanization Prospects (2009 revision)], (United Nations, 2010), Tabelle A.12. Gegeewns vuur 2007.</ref><ref>[http://www.ine.pt/ITDS, Rui Campos, Pedro Senos. ''Statistics Portugal.] Skreewn op 30 juni 2009. Bekekn op 8 juli 2009.</ref> leu wont dr in de [[Metropool Lissabon]] (wat ongevear 27% van t hele inwonnertal van Portugal is). Lissabon is de meest westerlik lignde grote stad van Europa, de meest westerlike heuwdstad en de ennigste an de [[Atlantiese Oseaan|Atlantiese]] kuste en de [[Tagus]]rivier.
- 
+'''Lissabon''' (in t [[Portugees]]: '''Lisboa''', Tweantse oetsproake {{IPA|/'lɪsəbɔ̃/}}, Portugese oetsproake {{IPA|/liʒˈβoɐ/}})  is de heuwdstad van [[Portugal]]. t Is ook de grötste stad van det laand, met binn de offisjele greanzn 547.631 inwonners<ref>[http://www.ine.pt/scripts/flex_v10/Main.html Censos 2011 – Resultados Preliminares]</ref> op ne oppervlakte van 84,8 km². t Versteadelikte gebeed um Lissabon strekt zik wied boetn de offisjele greanzn oet. Doar wont nog es 3 miljoen leu<ref>[http://www.demographia.com/db-worldua.pdf Demographia: World Urban Areas], meart 2010</ref> op ne oppervlakte van 958 km², woermet Lissabon t neegnde-grötste versteadelikte gebeed van [[Europa (continent)|Europa]] is. Ongevear 2.831.000<ref>United Nations Department of Economic and Social Affairs, [http://esa.un.org/wup2009/unup/index.asp?panel=2 World Urbanization Prospects (2009 revision)], (United Nations, 2010), Tabelle A.12. Gegeewns vuur 2007.</ref><ref>[http://www.ine.pt/ITDS, Rui Campos, Pedro Senos. ''Statistics Portugal''.] Skreewn op 30 juni 2009. Bekekn op 8 juli 2009.</ref> leu wont dr in de [[Metropool Lissabon]] (wat ongevear 27% van t hele inwonnertal van Portugal is). Lissabon is de meest westerlik lignde grote stad van Europa, de meest westerlike heuwdstad en de ennigste an de [[Atlantiese Oseaan|Atlantiese]] kuste en de [[Tagus]]rivier.
+
 Lisbon is erkeand as [[wearldstad]] um de belangrieke plek wat t hef in finansjele zaakn, (internasjonaaln) haandel, [[media]], [[vermaak]], [[keunst]], oonderwies en [[toerisme]]<ref>[http://www.lboro.ac.uk/gawc/world2010t.html ''The World According to GaWC 2010''.] Globalization and World Cities Study Group and Network, [[Loughborough Universiteat]]. Bekekn op 3 meart 2009</ref><ref>[http://www.lboro.ac.uk/gawc/citylist.html ''Inventory of World Cities''.] Globalization and World Cities (GaWC) Study Group and Network. Bekekn op 1 desember 2009.</ref> t Is ene van de [[ekonomie]]se middelpeuntn van t wearlddeel, met nen gröainden finansjeeln tak en de grötste/tweede-grötste zeecontainerhaawn an de Atlantiese kuste van Europa.<ref>[http://www.garraioak.ejgv.euskadi.net/r41-430/es/contenidos/informacion/2935/es_4078/adjuntos/7_avanceplan.pdf "Avance del Plan Territorial Sectorial de la Red Intermodal y Logística del Transporte de la Comunidad Autónoma del País Vasco"] – Eusko Jaurlaritza – Gobierno Vasco</ref> De lochthaawn, [[Lisbon Portela Airport]], verwoarket joarliks ongevear 13 miljoen leu. Lissabon steund in [[2007]] 25ste op de [[Lieste van beste steadn um in te wonn]], volgns t blad [[Monocle (blad)|Monocle]].<ref>[http://www.monocle.com/sections/affairs/Magazine-Articles/The-Worlds-top-25-most-liveable-cities/ Monocle.com. ''Monocle, oetgawe Juni 2009''.] Bekekn op 26 juni 2010</ref> Lissabon is noa [[Istanboel]], [[Rome]], [[Barcelona]], [[Madrid]], [[Athene]] en [[Milaan]] de drokstbezöchte stad van Zuud-Europa, met 1.740.000 touristn in 2009.<ref>[http://www.euromonitor.com/euromonitor-internationals-top-city-destinations-ranking/article Bremner, C. ''Euromonitor International's Top City Destination Ranking''.] [[Euromonitor International]]. Skreewn op 10 januwoari 2011. Bekekn op 10 januwoari 2011</ref> De strekke Lissabon is de riekste strekke van Portugal, met nen koopkracht van gemiddeld €26.000,-- per heuwd van de bevolking (4.7% heuger as t gemiddelde in Europa). 
 
 Völle internasjonale grote bedriewe hebt n heuwdkantoor in Lissabon, en t is doarduur de neegnde stad van de wearld wat t antal internasjonale bedriewe angeet.<ref>[http://www.agencialusa.com.br/index.php?iden=7832 "Lisboa é 9ª cidade que mais recebe congressos internacionais"] – Agência LUSA</ref> In Lissabon zit ook de [[Portugese regearing]] en n [[Presideant van Portugal|Presideant]] wont dr.
