--- a/Sahara.mw
+++ b/Sahara.mw
@@ -1,13 +1,13 @@
-[[Ofbeelding: Sahara satellite hires.jpg|thumb|right|300px|Satellietbeeld van de Sahara]]
+[[Ofbeelding: Sahara satellite hires.jpg|thumb|300px|Satellietbeeld van de Sahara]]
 [[Bestaand:Evening Pass over the Sahara Desert and the Middle East.ogv|thumb|300px|Ne video van de bemanning van Expedition 29 in t [[International Space Station]] as ze oawer t [[Midden-Oostn]] en de sahara vleegnt.]] 
 [[Bestaand:Libya 4985 Tadrart Acacus Luca Galuzzi 2007.jpg|thumb|[[Tadrart Acacus]]-weuste in westerlik [[Libië]], deel van de Sahara.]]
 [[Bestaand:SafsafOasis SAR comparison.jpg|thumb|t Böawnste plaatjen löt de [[Safsaf-Oase]] zeen op t Saharaoppervlak. n Euntersten is de rotsloage oonderlaanks, woerop doonkere kanaaln te zeen zeent van nen rivier den't ooit de oase water brachtn.]]
 
-De '''Sahara''' (in t [[Arabies]]:لصحراء الكبرى, ''Aṣ-Ṣaḥrā´ al-Kubrā'', "De Grote Weuste") is de grötste zaand[[weuste]] van de wearld, en de tweedegrötste weuste noa [[Antarktika]].<ref>[http://geology.com/records/largest-desert.shtml Geology.com. ''Largest Desert in the World'']. Bekekn op 30 dezember 2011</ref> Met oawer de  9.400.000 km2, strekt t oawer t grötste deel van [[Noord-Afrika]], woermet t hoaste net zo groot is as [[Volksreppubliek Sjina|Sjina]] of de [[Verenigde Stoaten]]. De Sahara löp van de [[Rode Zee]], met doar bie in deeln van de [[Middellaandse Zee]]kuste, noar de kuste an n Atlantiesen Oseaan.
- 
+De '''Sahara''' (in t [[Arabies]]:لصحراء الكبرى, ''Aṣ-Ṣaḥrā´ al-Kubrā'', "De Grote Weuste") is de grötste zaand[[weuste]] van de wearld, en de tweedegrötste weuste noa [[Antarktika]].<ref>[http://geology.com/records/largest-desert.shtml Geology.com. ''Largest Desert in the World'']. Bekekn op 30 dezember 2011</ref> Met oawer de 9.400.000 km², strekt t oawer t grötste deel van [[Noord-Afrika]], woermet t hoaste net zo groot is as [[Volksreppubliek Sjina|Sjina]] of de [[Verenigde Stoaten]]. De Sahara löp van de [[Rode Zee]], met doar bie in deeln van de [[Middellaandse Zee]]kuste, noar de kuste an n Atlantiesen Oseaan.
+
 Noar t zuudn wörd de Sahara begreansd duur de [[Sahel]], nen streppel van tropiese en sub-tropiese gröslaandn, [[savanne]]s en stroeklaandn, woermet t noordn begeent van t middel- en westerlike [[Sub-Saharaans Afrika]].
 
-Wat van de [[Zaandduun|zaandduunn]] köant 180m hoge wordn.<ref>Arthur N. Strahler and Alan H. Strahler. (1987) Modern Physical Geography–Third Edition. New York: John Wiley & Sons. Page 347</ref> n Naam keump van t Arabiese woard vuur weuste. (صَحراء ''ṣaḥrāʾ'' {{IPA|sˤɑħrɑːʔ||ar-Sahara.ogg}}).<ref>[http://www.etymonline.com/index.php?term=Sahara "Sahara."] ''[[Online Etymology Dictionary]].'' Douglas Harper, Historian. Verkreegn op 25 juni 2007.</ref><ref>[http://online.ectaco.co.uk/main.jsp?do=e-services-dictionaries-word_translate1&status=translate&lang1=23&lang2=ar&source_id=2119140 Omline.ectaco.co.uk. ''English-Arabic online dictionary]. Skreewn op 28-12-2006. Bekekn op 12-06-2010</ref>
+Wat van de [[Zaandduun|zaandduunn]] köant 180m hoge wordn.<ref>Arthur N. Strahler and Alan H. Strahler. (1987) Modern Physical Geography–Third Edition. New York: John Wiley & Sons. Page 347</ref> n Naam keump van t Arabiese woard vuur weuste. (صَحراء ''ṣaḥrāʾ'' {{IPA|sˤɑħrɑːʔ||ar-Sahara.ogg}}).<ref>[http://www.etymonline.com/index.php?term=Sahara "Sahara."] ''[[Online Etymology Dictionary]].'' Douglas Harper, Historian. Verkreegn op 25 juni 2007.</ref><ref>[http://online.ectaco.co.uk/main.jsp?do=e-services-dictionaries-word_translate1&status=translate&lang1=23&lang2=ar&source_id=2119140 Omline.ectaco.co.uk. ''English-Arabic online dictionary'']. Skreewn op 28-12-2006. Bekekn op 12-06-2010</ref>
 
 ==Klimaat en laandbeskriewing==
 De Sahara is onmeundig dreuge en gemiddeld reagnt t meender as 100 millimeter in t joar. Daagns is t dr bloodhete en 's nachtes is dr beheurlik koold (det he'j in de meeste weustes). As t dan wal ne keer reagnt, geet det zo onbenullig det t vuur reaizigers gevöarlik kan wean; t water wörd of evoord duur [[wadi]]'s, dee't dr vuur reaizigers as pad oetzeet. t Kan dan gebuurn at leu in de Sahara verdreenkt.
@@ -23,12 +23,11 @@ In de middag van [[30 meart]] [[2009]] völ dr um 14:15u [[snee]] in t noordn va
 In [[Algerieje]], [[Libië]] en [[Tsjaad]] haalt ze völle [[öllie]] en [[eardgas]] noar boawn. In [[Marokko]] doot ze völle [[fosfaat]] winn. 
 
 ===Deers en plaantn===
-Dr zeent völle verskeaidene deers in de Sahara, zo as de [[Addax]] (''Addax nasomaculatus''), t [[maannskoap]] (''Ammotragus lervia''), t [[jachtluipeard]] (''Acinonyx jubatus'') en [[gestreepten hyena]] (''Hyaena hyaena''). De  plaantn hebt zik anpast an de grote temperatuurwesselingn. Ze hebt lange wörtels um makkeliker water oet de groond op te haaln en kleaine dikke blaadn. 
+Dr zeent völle verskeaidene deers in de Sahara, zo as de [[Addax]] (''Addax nasomaculatus''), t [[maannskoap]] (''Ammotragus lervia''), t [[jachtluipeard]] (''Acinonyx jubatus'') en [[gestreepten hyena]] (''Hyaena hyaena''). De plaantn hebt zik anpast an de grote temperatuurwesselingn. Ze hebt lange wörtels um makkeliker water oet de groond op te haaln en kleaine dikke blaadn. 
 
 ==verwiezingn==
 {{Bron|<references/>}}
 
 [[Kategorie: Tweants artikel]]
-[[Kategorie: Laandskop]]
 [[Kategorie: Weuste]]
 [[Kategorie: Afrika]]
