[[:Kategorie:Laandskop]] weg-ehaald; [[:Kategorie:Weuste]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Weuste.mw
+++ b/Weuste.mw
@@ -12,4 +12,4 @@ Nöast hete weustes köant dr ook nog ieskoolde weustes wean, zo as op de [[zuud
 {{begin}}
 
 [[Kategorie:Tweants artikel]]
-[[Kategorie:Laandskop]]
+[[Kategorie:Weuste| ]]
