Verwysing nå döärverwyssyde repareerd ([[Mexiko]] nå [[Mexico (laand)]]), met behulp van [[Help:Pop-ups|pop-ups]]

--- a/Nevada.mw
+++ b/Nevada.mw
@@ -10,12 +10,12 @@
 | oppervlak waoter = 4,7
 | inwoeners = 2.723.322 (2011)
 | dichtheid = 9,57 
-| tiedzone = UTC -8/-7
+| tiedzone = UTC −8/−7
 | ofkorting = NV
 | antal graafschappen = 17
 | toe-etrejen = 31 oktober [[1864]]
 }}
-'''Nevada''' (sprek oet: ''ne-VAA-daa'') is n stoat in t westn van de [[Verenigde Stoaten]] van Amerika. Nevada is n zeuwnde-meest oet estrekten stoat, n 35sten wat bevolkingsantal angeet, en n neegnden dunstbevolkten stoat. t Is n grötsten stoat van de VS den't nit an [[Kanada]], [[Mexiko]] of nen oseaan greanst. Tweedoarde van t volk van Nevada wont in de agglomerasie van [[Las Vegas]]<ref>[http://www.census.gov/popest/metro/tables/2009/CBSA-EST2009-02.csv  United States Census Bureau, Population Division. ''Table 2. Annual Estimates of the Population of Combined Statistical Areas: April 1, 2000 to July 1, 2009 (CBSA-EST2009-02).] 23 meart 2010. Bekekn: 19 april 2010</ref>, woerbinn de dree grötste steadn lignt.<ref>[http://www.census.gov/popest/cities/tables/SUB-EST2009-04-32.csv Census.gov - SUB-EST2009-04-32]</ref> De heuwdstad van Nevada is [[Carson Stad, Nevada|Carson Stad]].  
+'''Nevada''' (sprek oet: ''ne-VAA-daa'') is n stoat in t westn van de [[Verenigde Stoaten]] van Amerika. Nevada is n zeuwnde-meest oet estrekten stoat, n 35sten wat bevolkingsantal angeet, en n neegnden dunstbevolkten stoat. t Is n grötsten stoat van de VS den't nit an [[Kanada]], [[Mexico (laand)|Mexiko]] of nen oseaan greanst. Tweedoarde van t volk van Nevada wont in de agglomerasie van [[Las Vegas]]<ref>[http://www.census.gov/popest/metro/tables/2009/CBSA-EST2009-02.csv  United States Census Bureau, Population Division. ''Table 2. Annual Estimates of the Population of Combined Statistical Areas: April 1, 2000 to July 1, 2009'' (CBSA-EST2009-02).] 23 meart 2010. Bekekn: 19 april 2010</ref>, woerbinn de dree grötste steadn lignt.<ref>[http://www.census.gov/popest/cities/tables/SUB-EST2009-04-32.csv Census.gov - SUB-EST2009-04-32]</ref> De heuwdstad van Nevada is [[Carson Stad, Nevada|Carson Stad]].  
 
 Nevada's laandskop is vuurnamelik [[weuste]] en löag, en t meeste ligt in ne [[Grote Komme]]. Gebeedn op t zuudn van de Grote Komme lignt in de [[Mojaveweuste]], terwiel at t [[Tahoemear]] en de [[Sierra Nevada (VS)|Sierra Nevadaboargen]] op de westelike raand lignt. Zowat 86% van t stoatsgebeed heurt an de [[Regearing van de VS]] oonder verskeaidene ofdelings, zowal oonder börgerzaakn as t leager.<ref>[http://web.archive.org/web/20060930112237/http://www.nv.blm.gov/landsales/LandFedAcresAgency.pdf US Dept. of the Interior, Bureau of Land Management. Federal Land Acres in Nevada.] Bekekn: 7 May 2009</ref>
 
@@ -26,7 +26,7 @@ Doo't vaste wör elegd at [[gokn]] legaal was en de regels vuur trouwn en skeaid
 Nevada's bienaam is offisjeel "n Zilverstoat", umdet zilver aait belangriek hef ewest in de geskiedenis en ekonomie van n stoat. 
 
 == Oetgoande Koppeling ==
-* [http://www.nv.gov Offisjele webstea van Nevada]
+* [http://www.nv.gov/ Offisjele webstea van Nevada]
 
 == Verwiezings ==
 <references/>
