--- a/Neadersassiske_måten.mw
+++ b/Neadersassiske_måten.mw
@@ -4,15 +4,13 @@ De inholdsmåten wörden meysttyds enöömd når de soorten bäkke, kisten of ka
 
 Et bysündere is dat bepålde naams vöär inhold, uppervlak en gewicht etselvde warren, so as ''spint'' en ''mürre''.
 
-
-
 ==Afskaffing==
 In [[1820]] wör in [[Nederland]] de [[IJkwet]] invoord, üm de wildgroi an måte en definitys af te skaffen. Een  ''skeapel'' was by vöärbeald gröäter in [[Tweante|twentsk]] as in [[Utrecht (previnsie)|Utrecht]]. Under et volk bleaven de olde måten skounwal noch meyr as hunderd jår in bruuk. Et woord ''mürre'' of ''müdde'' is in et dageliks leaven mangs noch in bruuk as et geyt oaver een ''müd aerpel''. Ouk et timmermansgerei ''duumstok'' verwist noch når de olde duumafstand, vergelykbår med den engelsken ''inch''.
 
 ==Indeyling==
 Vöär insicht in den ümvang van de brukede måten sint in de understånde oaversichten de metriske måten der nöäst esat.
 
-{|
+{| class="vatop"
 | width=50% |
 ===Inhold===
 *''vat'' (100 l.)
@@ -37,16 +35,16 @@ Vöär insicht in den ümvang van de brukede måten sint in de understånde oave
 *''span'' (van duum töt pink, ong. 20 cm)
 *''duum'' (2,5 cm)
 
+|
 ===Uppervlak===
 Ouk warren der afsünderlike måten üm stükken grunduppervlak te meaten:
 *''bünder'' (1 are)
-*''müdde'' (32 are, vroger ouk 60 x 60 m)
+*''müdde'' (32 are, vroger ouk 60 × 60 m)
 *''spint'' (2 are)
 *''roo'' (1 are)
 *''margen'' ([[Veluwe]], 600 roe)
-*''skeapel''/''skeppel (40 x 40 m, of 887 m²) <ref>Schönfeld-Wichers, K.D. ''Woordenboek Nederlands-Twents''. 1979: Hengelo, Uitgeverij Broekhuis. "landmaten". p. 285</ref>
+*''skeapel''/''skeppel'' (40 × 40 m, of 887 m²) <ref>Schönfeld-Wichers, K.D. ''Woordenboek Nederlands-Twents''. 1979: Hengelo, Uitgeverij Broekhuis. "landmaten". p. 285</ref>
 
-| valign=top |
 ===Gewicht===
 *''müdde'' (70 kg, vroger 80 kg)
 *''skeapel''/skeppel (20 kg)
