--- a/Rheebruggen_(havezate).mw
+++ b/Rheebruggen_(havezate).mw
@@ -9,20 +9,24 @@ De [['t Ogeveine|Ogeveinse]] schriever [[A.A. Steenbergen|Albert Steenbergen]] (
 
 Het gedicht begunt zo<ref>G. Kuipers (1976), ''Volksleven in het oude Drente''. Den Haag: Boekencentrum</ref>:
 
-:''Reebroggens Borgt was offebraand;
-:''Drij kiender dweelden um deur 't laand;
-:''Zij hadden honger, waeren kold
-:''En zwörven krietend um in 't wold''
+<poem style="margin-left:1.5em; font-style:italic">
+Reebroggens Borgt was offebraand;
+Drij kiender dweelden um deur 't laand;
+Zij hadden honger, waeren kold
+En zwörven krietend um in 't wold
+</poem>
 
 En eindigt zo:
 
-:''De kiender raekten hoog in staand
-:'' 't Oldst wörde Drost van Drentelaand;
-:''
-:''Het tweede, ook 'n grootmachteg heer,
-:''Bouwde op het huus Reebroggen weer.
-:''Het darde wörde 'n Vorst der Kark.
-:''Looft God de Heer veur 't wonderwark.''
+<poem style="margin-left:1.5em; font-style:italic">
+De kiender raekten hoog in staand
+'t Oldst wörde Drost van Drentelaand;
+
+Het tweede, ook 'n grootmachteg heer,
+Bouwde op het huus Reebroggen weer.
+Het darde wörde 'n Vorst der Kark.
+Looft God de Heer veur 't wonderwark.
+</poem>
 
 ==Bron==
 *Jaap Bos (en aandern) (1989), ''Huizen van stand: geschiedenis van de Drentse havezaten en andere herenhuizen en hun bewoners''. Möppelt: Boom
