--- a/Piraat_(radio).mw
+++ b/Piraat_(radio).mw
@@ -1,4 +1,4 @@
-[[Ofbeelding:Antenne.jpg|thumb|right|300px|Antenne van piraatn]]
+[[Ofbeelding:Antenne.jpg|thumb|300px|Antenne van piraatn]]
 Nen '''piraat''', voloet '''zeandpiraat''' of '''zeandamateur''' is nen kearl (en mangs ook ne vrouwe) of groep van leu den at zoonder [[zeandvergunnige]] muziek dreeit op de FM-baand van de ether. 
 
 In t begin warn dit vuural piraatn dee at vanof de zee (booreailaandn of skepe) oetzeandn deedn, mear rechtevoort is t vuural op t vastelaand n begrip.
@@ -32,7 +32,7 @@ Krek as de pilootntaal in de pilootnwearld, hebt de zeandpiraatn n eegn ''jargon
 * An evreugn plaat zal edreeid wordn vuur...:
 ** ''zo geet de plaat ook nog in de rondte vuur <nowiki>[naamn]</nowiki>, en det mos n plaatje wean van <nowiki>[artiestnnaamn]</nowiki>, plaatje geet ook eavn dee kant op an hè''.
 * naamns vuur grammofoonplaatn:
-** ''plaate/ploat/plaatje
+** ''plaate/ploat/plaatje''
 ** ''zwarte pannekookn''
 
 Mangs kriegnt ze völle reaksies, vuural van aandere zeandpiraatn, dee öar vertelt woer at de ontvangst good is. dit meeldt ze dan in t kort, duur te kuiern tiedns t dreein van ne instrumentale plaat.
