--- a/Beleg_van_Breevoort_(1597).mw
+++ b/Beleg_van_Breevoort_(1597).mw
@@ -47,7 +47,7 @@ Noa betalen van ofkoopsommen ter weerde van 6.000 gulden konden de bezetters goa
 Nen stoatssoldoat den in den nacht noar buut zocht, had bi-j gebrek an lech n bösken streuj an-estokken, deur unveurzichtiheid raakten den heujzoller in braand den oaversloog noar andere huze woarbi-j de ganse stad op 20 huze noa ofbraanden. Howal Maurits kwoad was oaver et veuwal, dacht e ok dat et n ofschrikwekkend veurbeeld veur andere staedn zol waen. Maurits leet 2 vendels achter in de stad en trok wieter noar [[Eanske]].
 
 ==Bron==
-* [[Staring Instituut]] Stichting 800 Jaar Veste Bredevoort. 1988 ''BREDEVOORT. - Bredevoort een heerlijkheid.ISBN 90-9002135-3 (eerste uutgave 1988)
+* [[Staring Instituut]] Stichting 800 Jaar Veste Bredevoort. 1988 ''BREDEVOORT. - Bredevoort een heerlijkheid''. ISBN 90-9002135-3 (eerste uutgave 1988)
 
 [[Kategorie:Achterhooks artikel]]
 [[Kategorie:16e eeuw]]
