--- a/Ostara.mw
+++ b/Ostara.mw
@@ -21,13 +21,13 @@ Ostara is de godinne van de strålende morgen, et boavenkummende licht.
 ==üüt geskrivten==
 [[Beda Venerabilis]] – een 8. eywske angelsassisken munnik en bybelgeleyrden – nöömden de månd april 'Eosturmonath', de månd van Eostre:  
 
-''Eosturmonath hevt de name dee nu vertaald wördt as påsmånd, en dee ooit enömed wördden når een godinne van ear, enaamd Eostre, in wee höyr ear feesten evyrd wörd in dee månd. Nu nöömd se de påsktyd med höyr name en nöömd de vröögden van de nye rite med de tyd eyrde name van de olde gewöynte.’ 
+''Eosturmonath hevt de name dee nu vertaald wördt as påsmånd, en dee ooit enömed wördden når een godinne van ear, enaamd Eostre, in wee höyr ear feesten evyrd wörd in dee månd. Nu nöömd se de påsktyd med höyr name en nöömd de vröögden van de nye rite med de tyd eyrde name van de olde gewöynte.''
 
 In de ''vita Carola Magni'' van [[Einhardt]] (9. eywe na Christus), de geskydskryver van [[Karel 'n Grootn|Karel den Grouten]] wördt et woord ‘Ostarmonath’ gebrüükt vöär april. Üüt disse sinsneade wörd ehaald dat Eostra ouk wal Ostara enömed wördden. 
 
 In de byb van Abdij van Corvey in Noordryn-Westfalen hebbet se olde boken. Eyne van dee boken steyt een gedicht in, ewyd an Eostar. 
 Disse tekste kümt üüt de 10. eywe. Et is een gebed dee vrögt når et vrüchbear maken van de akker, et wear gröön wörden van de natuur. 
-{|
+{| class="vatop"
 |
 ===Olddüütsk===
 
@@ -39,7 +39,7 @@ Disse tekste kümt üüt de 10. eywe. Et is een gebed dee vrögt når et vrüchb
 :Èa cinendra, 
 :Eluiendra,
 :Frida him.
-| valign=top |
+|
 === Neadersassisk ===
 
 :Oust’re, Oust’re, 
@@ -56,6 +56,7 @@ Verder bint der geyn teksten bekend oaver disse (angel)sassiske godinne. Up een 
 
 == Andere mytologyen ==
 Ostara hevt enkele soortgelykige plaatsen in [[mythologien|mytologyen]] van andere plekken in de tyd en de wearld.
+
 {|
 | style="width:15em;"| '''Mytology''' || style="width:4em;"| '''Godinne'''
 |-
@@ -72,10 +73,8 @@ Ostara hevt enkele soortgelykige plaatsen in [[mythologien|mytologyen]] van ande
 |[[Slaviske mytology]] || [[Oesja]]
 |}
 
-
-
-
 {{Dialekt|sdz}}
+
 [[Kategorie:Saksen (volk)]]
 [[Kategorie:Geleuf]]
 [[Kategorie:Germaanse mythologie]]
