--- a/Ostara.mw
+++ b/Ostara.mw
@@ -3,7 +3,7 @@
 Der wörd vake esegd dat Ostara desülvden is as de noordske vrüchtbearheidsgodinne [[Frieja|Vrya]].
 
 ==Påsken/Ousteren==
-Up [[Duutslaand|Düütskland]] wörd et Påsken ''Ostern'' enöömt en in [[Englaand|Engeland]] ''Easter'' [en nudaags sassisk sol et ''Ousteren'' weasen]. Den Geysteliken [[Beda Venerabilis]] (673-735) skreyven up de ''temporum ratione'' dat de [[Saksen (volk)|sassen]] een godinne anbeaden dee Eástra enömed wördden. De månd maert wördden by ear ''Ésturmonath'' enömed, ofwal ''Oustara syn månd''.
+Up [[Duutslaand|Düütskland]] wörd et Påsken ''Ostern'' enöömt en in [[Verienigd Keuninkriek|Engeland]] ''Easter'' [en nudaags sassisk sol et ''Ousteren'' weasen]. Den Geysteliken [[Beda Venerabilis]] (673-735) skreyven up de ''temporum ratione'' dat de [[Saksen (volk)|sassen]] een godinne anbeaden dee Eástra enömed wördden. De månd maert wördden by ear ''Ésturmonath'' enömed, ofwal ''Oustara syn månd''.
 
 In et [[Oldheugduuts|oldhougdüütsk]] het godinne Eástr Ostara. De eyre van godinne Ostara döyden de sassen elk jår een feest, wat sy ôstartage nömeden. Ôstartage is et meyrvold van ôstarâ. Et feest duurden twey dagen. Et engelsken Easter kümt van de name van de godinne Eástra en in et düütsk Ostern an godinne Ostara. Beiden verwyset når et ousten, dår wår de sünne upkümt.
 
