--- a/Admiraliteit_van_Frieslaand.mw
+++ b/Admiraliteit_van_Frieslaand.mw
@@ -5,7 +5,7 @@ De '''Friese Admiraliteit'''  was ien van de admiraliteiten in de tied van [[Rep
 ==Vernietiging van et Admiraliteitsarchief==
 Een protte bronnen van de Friese Admiraliteit bin d'r tegensworig niet meer. Bij de grote braand van 12 op 13 febrewari 1771 in [[Harlingen (stad)|Harlingen]] gong niet allienig een groot diel van et archiefmateriaol van de Admiraliteit in vlammen op, mar ok vule kaorten en dokumenten over de geschiedenis van Frieslaand. Et weinige resterende archiefmateriaol wodde overbrocht naor et Departement van Marine in [[Den Haag]]. Toen daor op 8 jannewari 1844 braand uutbrak, vergong al et archiefmateriaal wat nog over was.<ref>[http://www.dbnl.org/tekst/_jaa003194501_01/_jaa003194501_01_0048.htm T.H.Milo over "De Nederlandsche marinearchieven" in april 1944], zie p.320</ref> Van de grote mannen van de Admiraliteit is niet zo vule bekend. Oorzaak hier is ok et gebrekkig archiefmateriaol. Treffend is et verhael van Beucker Andreae. Hij maekte een studie naor et leven van [[Aucke Stellingwerf]]. Over zien zuuktocht naor de doopboeken van zien geboorteplak schreef hij et volgende:
 
-<blockquote>''Er was echter bij de kerkvoogden eene kist met oude boeken en schrifturen bewaard gebleven, waaronder, naar de meening van een oudinwoner der stad, doopboeken zouden schuilen. Maar die kist had men vóór eenige jaren ter bewaring aan H. H. Diakenen overgegeven en daar zij ongelukkig niet slotvast was, had de moeder in het oude-mannen-huis de boeken, daarin voorhanden, tot allerlei huishoudelijk gebruik tot patronen verknipt! En zoo is het gekomen, dat, ofschoon de kist aldaar nog bestaat, de papieren er niet meer te vinden zijn. <ref>Michiel de Ruyter en syn Fryske ûnderadmiraels (Leeuwarder Courant, 4 maart 1962)</ref> </blockquote>
+<blockquote>''Er was echter bij de kerkvoogden eene kist met oude boeken en schrifturen bewaard gebleven, waaronder, naar de meening van een oudinwoner der stad, doopboeken zouden schuilen. Maar die kist had men vóór eenige jaren ter bewaring aan H. H. Diakenen overgegeven en daar zij ongelukkig niet slotvast was, had de moeder in het oude-mannen-huis de boeken, daarin voorhanden, tot allerlei huishoudelijk gebruik tot patronen verknipt! En zoo is het gekomen, dat, ofschoon de kist aldaar nog bestaat, de papieren er niet meer te vinden zijn.''<ref>Michiel de Ruyter en syn Fryske ûnderadmiraels (Leeuwarder Courant, 4 maart 1962)</ref> </blockquote>
 
 ==De oprichting==
 [[Ofbeelding:Harlingen - Schoorsteenstuk Statenjacht, A. Oostendorp.jpg|thumb|300px|''Op de veurgroond drie schippen van de Friese Admiraliteit'']]
@@ -61,7 +61,7 @@ As gevolg verkeerden in protte schippen, meerst ombouwde koopvaardijschippen, de
 Doe [[Zweden]] tiedens de Noordse Oorlog (1655-1660) driegde Denemarken te veroveren begon de Republiek te vrezen veur zien haandel op de [[Oostzee]]. Zweden, dat hiermit heerschappij over de Oostzee verkriegen zol, zol de Nederlaanse haandel een protte schade an kunnen brengen. De Nederlaanse vloot holp daoromme de Denen in de stried. Onder leiding van Jacob van Wassenaer Obdam wodden de Zweden verslagen in de Slag in de Sont. Ok Friese schippen nammen diel an disse zeeslag, onder aandere de 'Albertina' mit de kapitein Auke Stellingwerf en de 'Judith' mit Tjerk Hiddes de Vries as kapitein. Stellingwerff, die naemens de Admiraliteit voer, overwinterde van 1658 op 1659 in Denemarken. In oktober 1658 had hij onder commandeur Jan Gideons Verbrug een Nederlaans eskader naor de Hoek van Skagen begeleid. Tjerk Hiddes de Vries het die winter in Kopenhagen deurbrocht, waor hij an de verdediging van de stad tegen de Zweedse anvallers dielnam.
 
 ==Twiede Ingelse Oorlog==
-[[Ofbeelding:Van Soest, Four Days Battle.jpg|thumb|300px|''De '''Vierdaegse Zeeslag''', deur Pieter Cornelisz van Soest, schilderd rond 1666]]
+[[Ofbeelding:Van Soest, Four Days Battle.jpg|thumb|300px|''De '''Vierdaegse Zeeslag''''', deur Pieter Cornelisz van Soest, schilderd rond 1666]]
 Doe in 1661 deur de Staoten-Generaol opdracht geven wodde tot uutrusting van 18 schippen, krege de Friese Admiraliteit opdracht drie daorvan te leveren. De schippen wodden nooit ofleverd. Doe in 1664 vief schippen uutrust wodden mossen leverde de Admiraliteit wederom niets. De Staoten-Generaol raekten irriteerd en verklaerden ''ten hooghsten misnoeght'' te wezen. Nog datzelde jaor wodden toch nog twie oorlogsschippen bouwd, de 'Sevenwolden' en de 'Princes Albertina'. Wiels de oorlogsdrieging mit Ingelaand zichtbaor toenam, ruste de Admiraliteit meer en meer schippen uut. De 'Oostergo' mit 225 man en 56 kanonnen en 'De Steden' mit 175 man en 46 kanonnen boden eerst voldoende bescherming. Desondanks vaerdigden de Staoten-Generaol in december 1664 wederom opdrachten uut veur de bouw van 72 nije schippen. Et Friese andiel hierin wodde een vloot van negen schippen mit een totale bemanning van 1930 matrozen en 416 kanonnen. In jannewari 1665 kwam hier bovenop nog iens een order veur twie jachten, drie oorlogsschippen, twie galjoten, twie branders en een ammunisieschip binnen bij de Friese Admiraliteit. Now deur de oorlogsdrieging geld gien belemmering meer was, wodde d'r ogenblikkelik begonnen mit de bouw van de schippen.
 
 Naodat de Twiede Ingelse Oorlog definitief uutbroken was zeilde de Friese vloot uut. In de loop van febrewari 1665 verzaemelde et Friese eskader him bij [[Texel]]. De bemanning wodde meerstal worven onder zeemannen van de koopvaardij die in de oorlog niet op haandelsschippen anmonsteren mochten. Op et schip de 'Westergo' dee een Poolse matroos een interessaante uutvinding. Hij ontdekte een manier waordeur een vijandelik zeil mit pielken in braand schoten wodde kon. Op 1 meie wodden alle kapiteins bij Stellingwerff reupen en wodden de orders uutdield. De volgende dag kon men echter deur een hadde wiend niet uutveren. In de laeste daegen wodden inkelde huweliken sloten veur de vloot op 24 meie uutvoer. De schippen 'Zevenwolden', 'Groeningen', 'Prinses Albertine', 'd'Elf Steden', 'Westergo', 'Omlandia', 'Frisia', 'De Postillon van Smirna', 'Hollandia' en 'Oostergo' mit een gezaemelike bemanning van 2279 matrozen en 700 kanonnen vertrokken. Zonder dat et eerst tot een groot treffen kwam deurkruuste de vloot de Noordzee waorbij verschillende Ingelse schippen tot zinken brocht wodden. In juni 1665 sneuvelde Stellingwerf in de Slag bij Lowestoft. Onder leiding van Michiel de Ruyter wodde deur onder aandere Friese schippen in 1666 slag leverd bij Duinkerke in de Vierdaegse Zeeslag. In totaal verleuren de Ingelsen tien schippen en 2800 man, tegenover de vier schippen en de twieduzend man die de Nederlaanders verleuren. In de Twiedaegse Zeeslag sneuvelden Tjerk Hiddes en Coenders en wodde de Friese vloot zwaor beschadigd. Et bevel over et Friese flottielje kwam now feitelik bij Enno Doedes Star te liggen.
@@ -162,6 +162,5 @@ Hier een overzicht van dielnemende schippen en kapiteins van de Admiraliteit van
 *[http://home.wanadoo.nl/mpaginae/ Pagina mit informaosie over de Friese Admiraliteit]
 *[http://www.angelfire.com/vt/sneuper/admdokkum.html Logboeken van de Friese Admiraliteit]
 
-{{DEFAULTSORT:Admiraliteit Van Frieslaand}}
 [[Kategorie:Stellingwarfs artikel]]
 [[Kategorie:Geschiedenis van Frieslaand]]
