--- a/Gruto.mw
+++ b/Gruto.mw
@@ -1,12 +1,12 @@
 [[Bestaand:Limosa limosa 2 (Marek Szczepanek).jpg|thumb|300px|De gruto]]
-[[Bestaand:LimosalimosaWorldDistribution.jpg|thumb|300px|Verspreidingsgebied, zoemers (geel), swienters (blauw), t hele jaor deur (greun)]]
-De '''gruto''' of '''regenfluiter''' ([[Latien]]: ''Limosa limosa'') is n voegelsoort uut de familie van de [[steltlopers]]. Disse voegel wördden veur t eerst beschreven deur [[Carolus Linnaeus]] in [[1758]].
+[[Bestaand:LimosalimosaWorldDistribution.jpg|thumb|300px|Verspreidingsgebied, zoemers (geel), swienters (blauw), et hele jaor deur (greun)]]
+De '''gruto''' ([[Latien]]: ''Limosa limosa'') is een voegelsoort uut de familie van de [[steltlopers]]. Disse voegel wördden veur et eerst beschreven deur [[Carolus Linnaeus]] in [[1758]].
 
 == Weivoegel ==
-De gruto is één van de meest bekende weivoegels. Hij hölt van wat zompigere weien, en völt zich op de hedendase weien mit n leeg waoterpeil niet zo thuus. t Antal gruto's is daorumme de leste tied hard achteruutegaon. Gruto's zeuken der eten mit der lange snavel in de grond, t liefst in ondiep [[waoter]].
+De gruto is één van de meest bekende weivoegels. Hij hölt van wat zompigere weien, en völt zich op de hedendase weien mit een leeg waoterpeil niet zo thuus. Et antal gruto's is daorumme de leste tied hard achteruutegaon. Gruto's zeuken der eten mit der lange snavel in de grond, et liefst in ondiep [[waoter]].
 
 == Verspreiding ==
-t Breuigebied van de gruto löp van [[Ieslaand]] tot an t oosten van [[Siberië]]. De overwienteringsgebiejen liggen in Zuud-Europa, [[Afrika]] en zelfs [[Australië (continent)|Australië]]. Mit de voegeltrek zie'j gruto's oek vake in de waddegebiejen.
+Et breuigebied van de gruto löp van [[Ieslaand]] tot an et oosten van [[Siberië]]. De overwienteringsgebiejen liggen in Zuud-Europa, [[Afrika]] en zelfs [[Australië (continent)|Australië]]. Mit de voegeltrek zie'j gruto's oek vake in de waddegebiejen.
 
 De soort hef drie ondersoorten:
 * ''L. l. islandica'': [[Ieslaand]], de [[Faeröer]], [[Sjetlaand]] en noordelik [[Noorwegen]].
@@ -14,14 +14,15 @@ De soort hef drie ondersoorten:
 * ''L. l. melanuroides'': midden- en oostelik Azië.
 
 == Voortplaanting ==
-Gruto's breujen vanaof de periode einde [[meert]] tot [[juni]]. Ze legen gemiddeld vier [[Aai (dier)|eiers]]. 24 tot 25 dagen lank breujen de voegels umste beurte op de eiers. As t [[gres]] langer wördt tiejens t breujen, wörden t [[nest]] gaondeweg beter aofedekt en is t nest beter bescharmp tegen roofdieren, allewel boeren der vaker overhinne riejen mit de gresmeier as t wat langer is. De ouwers passen nog zo'n vier weken op de jongen. Dit doon ze grege deur op n kleine aofstaand de jongen in de smiezen te houwen.
+Gruto's breujen vanaof de periode einde [[meert]] tot [[juni]]. Ze legen gemiddeld vier [[Aai (dier)|eiers]]. 24 tot 25 dagen lank breujen de voegels umste beurte op de eiers. As et [[gres]] langer wördt tiejens et breujen, wördt et [[nest]] staorigan beter aofedekt en is et nest beter bescharmp tegen roofdieren, allewel boeren der vaker overhinne riejen mit de gresmeier as et wat langer is. De ouwers passen nog zo'n vier weken op de jongen. Dit doon ze grege deur op een kleine aofstaand de jongen in de smiezen te houwen.
 
-n Bulte nesten wörden deur [[zeevoegels]] of [[kreien]] leegereufd. Gruto's breujen daorumme oek grege in de buurte van [[kiefte]]n en [[tuterink|tuteringen]], zodat ze mit mekaar t nest verdejigen kunnen.
+Een bulte nesten wörden deur [[zeevoegels]] of [[kreien]] leegereufd. Gruto's breujen daorumme oek grege in de buurte van [[kiefte]]n en [[tuterink|tuteringen]], zodat ze mit mekaar et nest verdejigen kunnen.
 
 == Voeraozie ==
 De gruto it [[wurm]]s, [[insektn|insekten]] en larven van insekten zo as [[emelte]]n ([[larve]]n van de [[langpootmogge]]). Gruto's pikken in Nederlaand soms wel 1200 emelten per dag uut de weie, waor veehouwers dan weer blie van wörden. In zien overwienteringsgebied in Afrika (Guinee-Bissau) it e rieste op de plaotselike riestevelden<ref>Leo Zwarts, nrc, 12 sept 2009</ref>.
 
-== [[Nedersaksies]] ==
+== [[Nedersaksisch]] ==
+De gruto wördt vake oek weld aneduud as ''(regen)tuter'' of ''regenfluiter'', disse benaming verwist liekewels strikt ezien naor de [[wulpe]].
 {|
 |
 * [[Achterhooks]]: ''grete''
@@ -33,7 +34,6 @@ De gruto it [[wurm]]s, [[insektn|insekten]] en larven van insekten zo as [[emelt
 * [[Sallaands]]:
 ** ''gritte'' ([[Kop van Overiessel]], [[Gällemuun]], [[Zwolle]], [[Kampereiland]], [[Kamperveen]])
 ** ''grutte'' ([[Zwolle]], [[Kampen (Overiessel)|Kampen]])
-** ''tuter'' ([[Zwolle]])
 | valign="top" |
 * [[Stellingwarfs]]: 
 **''gritte'' 
@@ -42,9 +42,6 @@ De gruto it [[wurm]]s, [[insektn|insekten]] en larven van insekten zo as [[emelt
 * [[Veluws]]:
 ** ''grut{{small()|t}}o''
 ** ''griet'' ([[Heerde]], [[Une]], [[Putten]], [[Niekark]], [[Barreveld (daarp)|Barreveld]], [[Emst]])
-** ''regenfluiter'' ([[Elspeet]])
-** ''raegentuter'' ([[Loenen (Apeldoorne)|Loenen]])
-** ''tuter'' ([[Apeldoorne (stad)|Apeldoorne]])
 |}
 
 == Referensies ==
