+image #WPWPTR #WPWP

--- a/Oarhoes.mw
+++ b/Oarhoes.mw
@@ -1,4 +1,5 @@
 {{Coordinate|NS=56/9//N|EW=10/12//E|article=/|map=right|type=city|dim=100000|region=DK}}
+[[File:Århus city trafikhavn.jpg|thumb|300px|right|Oarhoes ]]
 '''Oarhoes''' ([[Deens]]: ''Aarhus'') is n hoaven[[Stad (woonstee)|stad]] legen aan de noordoostkost van [[Jutlaand]], op t vaastelaand van [[Denmaark]]. De stad het 256.108 ienwoners (2013) en is doarmit de op ain noa grootste stad van [[Denmaark]]. Oarhoes beheurt tot de regio [[Midden-Jutlaand]] (Midtjylland) en ligt aan de [[Oarhoesbocht]] ien t [[Kattegat]]. 
 
 == Noam ==
